Fix colour bleed

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 .home {
-  background-color: red;
+  background-color: white;
 
   display: flex;
   flex-direction: column;
@@ -12,4 +12,11 @@
   height: 90vh;
 
   flex: 0 0 auto;
+}
+
+@media (prefers-color-scheme: dark) {
+  .test,
+  .home {
+    background-color: var(--dark_bg);
+  }
 }
