--- a/src/Splash.css
+++ b/src/Splash.css
@@ -2,7 +2,7 @@
   width: 80%;
   height: 90vh;
 
-  background-color: blue;
+  background-color: #5D6091;
   flex: 0 0 auto;
   position: relative;
   overflow: hidden;
@@ -20,6 +20,19 @@
 }
 
 .splashborder {
-  width: 100%;
-  bottom: 0;
+  width: calc(100% * 54/52);
+  left: calc(100% * -1/52);
+  bottom: calc(100% * -1/104);
+  color: white;
+}
+
+.splash {
+  pointer-events: none;
+  position: absolute;
+}
+
+@media (prefers-color-scheme: dark) {
+  .splashborder {
+    color: var(--dark_bg);
+  }
 }
